= Version History =
x.x:

- changed: group invitations (and add) no always goto mail
- changed: some logic when (re)inviting for better system messages to the users 

2.3 (2012-07-31):

- added: discussion widget from widget manager
- added: group_forum_topics widget from widget manager
- added: group_news widget from widget manager
- added: index_groups widget from widget manager
- added: group sidebar cleanup feature
- added: group profile fallback handling (error on old group profile link & redirect)
- added: group default access (if https://github.com/Elgg/Elgg/pull/253 is applied)
- added: admin action to enable/disable group notifications
- added: option to show the group members in the group related index widgets
- removed: index_discussions widget
- fixed: deprecated notice in invitations overview
- fixed: url error in invitation
- fixed: PHP wanring in group_river_widget
- fixed: pagination in group members sidebar
- fixed: invite autocomplete not using default autocomplete features
- fixed: forum topics widget ordering
- changed: plugin settings layout

2.2 (2012-05-07):

- added: featured group widget
- added: a index widget (for Widget Manager) to show the latest discussions
- added: widget title link for group membership (in combination with Widget Manager)
- added: option to invite all friends or all site members (admin only)
- fixed: outstanding invitations and membership request not always cleaned up
- fixed: incorrect widget title for group members
- fixed: deprecated notices in combination with widget_manager
- fixed: pagination in group members widget
- fixed: wrong action link in remove invitation
- fixed: bug with creating group invitations
- fixed: PHP notices and warnings
- changed: sending of group invite e-mails to be more generic
- changed: restored limited functionality of group activity river

2.1 (2012-04-16):

- added: option to limit group creation to site administrators
- fixed: language error in group sorting (thanks to LeeUK)